export class Constants {
  public static GRPC_EX_ORDER_TOKEN = 'GRPC_EX_ORDER_TOKEN'
  public static GRPC_EX_ORDER_PACKAGE = 'exchange.v1.order'
  public static GRPC_EX_ORDER_SERVICE = 'ExchangeOrderService'

  public static GRPC_EX_BLACK_LIST_TOKEN = 'GRPC_EX_BLACK_LIST_TOKEN'
  public static GRPC_EX_BLACK_LIST_PACKAGE = 'exchange.blacklist.admin'
  public static GRPC_EX_BLACK_LIST_SERVICE = 'ExchangeBlacklistService'

  public static GRPC_EX_USER_UNLIMITED_TOKEN = 'GRPC_EX_USER_UNLIMITED_TOKEN'
  public static GRPC_EX_USER_UNLIMITED_PACKAGE = 'exchange.user.unlimited.admin'
  public static GRPC_EX_USER_UNLIMITED_SERVICE = 'ExchangeUserUnlimitedService'

  public static GRPC_EX_ORDERBOOK_TOKEN = 'GRPC_EX_ORDERBOOK_TOKEN'
  public static GRPC_EX_ORDERBOOK_PACKAGE = 'exchange.orderbook.admin'
  public static GRPC_EX_ORDERBOOK_SERVICE = 'GrpcOrderbookService'

  public static GRPC_EX_USER_ZERO_FEE_TOKEN = 'GRPC_EX_USER_ZERO_FEE_TOKEN'
  public static GRPC_EX_USER_ZERO_FEE_PACKAGE = 'exchange.user.zero_fee.admin'
  public static GRPC_EX_USER_ZERO_FEE_SERVICE = 'ExchangeUserZeroFeeService'
}
